# claudit

./: .gitignore  LICENSE  README.md  STABILITY.md  ai_cost_tracker.py  claudit.py  lcars.tcss  ops_data.py  ops_widgets.py  pyproject.toml  test_incremental.py  test_ops_data.py  tui.py
.github/workflows/: guard.yml
claudit/: __init__.py  __main__.py  aggregation.py  cli.py  collectors.py  formatters.py  ingest_state.py  lcars.tcss  ledger.py  live_metrics.py  ops_data.py  ops_widgets.py  pidfile.py  pipeline.py  pricing.py  tui.py
docs/: plan-multi-root-scanning.md
llmcars/: __init__.py  __main__.py  _json_io.py  cli.py  collectors.py  formatters.py  ledger.py  live_metrics.py  llmcars.tcss  ops_data.py  ops_widgets.py  pidfile.py  pipeline.py  pricing.py  tui.py
scripts/: install-hooks.sh  pre-commit
tests/: test_cline_extraction.py  test_incremental.py  test_multi_model.py  test_ops_data.py  test_pidfile.py  test_pipeline.py
