[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claudit"
version = "0.1.0"
description = "Claude API spend tracker for Claude Code and Cline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "textual>=0.80",
    "textual-plotext>=0.2",
]

[project.scripts]
claudit = "claudit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudit*"]

[tool.setuptools.package-data]
claudit = ["*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
