[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcars"
version = "0.2.0"
description = "LLM API spend tracker for Claude Code and Cline (LCARS-style TUI)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "textual>=0.80",
    "textual-plotext>=0.2",
]

[project.scripts]
llmcars = "llmcars.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmcars*"]

[tool.setuptools.package-data]
llmcars = ["*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
